# agent-libs

./: .clang-format  .cmake-format.yaml  .gitignore  .travis.yml  CMakeCPackOptions.cmake  CMakeConfigurationTypes.cmake  CMakeLists.txt  CMakeListsForTest.cmake  Dockerfile  Dockerfile.builder  Dockerfile.s390x  README  README.md  bootstrap-agent  bootstrap-digwatch  bootstrap-falco  bootstrap-sysdig  description.txt  docker-builder-entrypoint.sh  fossa-deps.yaml  setup-dependencies  vg
bench/: CMakeLists.txt  protobuf.cpp
docker/: CMakeLists.txt  Dockerfile  Dockerfile-ubi.jinja2  Dockerfile-ubi8-aarch64.jinja2  Dockerfile-ubi8-s390x.jinja2  Dockerfile-ubi8.jinja2  Dockerfile.jinja2  docker-entrypoint.sh  generate_agent_docker.py  get-rpm-url.py
docker/agent/: CMakeLists.txt
docker/agent-kmodule/: CMakeLists.txt
docker/agent-kmodule-IKS/: CMakeLists.txt
docker/agent-kmodule-thin/: CMakeLists.txt
docker/agent-slim/: CMakeLists.txt
docker/agent-slim-v2/: CMakeLists.txt
docker/agentino/: CMakeLists.txt  Dockerfile  Dockerfile.local  Dockerfile.static  agentino-entrypoint.sh
docker/agentone/: CMakeLists.txt  Dockerfile  Dockerfile.local  agentone-entrypoint.sh
docker/alpine-builder/: Dockerfile  build-container.sh  entrypoint.sh  install-deps.sh
docker/builder/: Dockerfile  Dockerfile.aarch64  Dockerfile.s390x  bootstrap-agent  build-lpeg-with-so.sh  docker-builder-entrypoint.sh
docker/centos-builder/: Dockerfile  Dockerfile.aarch64  Dockerfile.s390x  build-container.sh  entrypoint.sh  install-deps.sh
docker/dependency_install_scripts/: install-b64.sh  install-benchmark.sh  install-boost.sh  install-curl.sh  install-go.sh  install-gperftools.sh  install-gtest.sh  install-jdk.sh  install-jq.sh  install-kubectl.sh  install-libyaml.sh  install-linuxbench.sh  install-lpeg.sh  install-lua.sh  install-openssl.sh  install-promscrape.sh  install-protobuf.sh  install-python.sh  install-simpleopt.sh  install-sonarcloud.sh  install-statsite.sh  install-valgrind.sh  install-yamlcpp.sh  install-zlib.sh
docker/dev/: CMakeLists.txt  Dockerfile  docker-entrypoint.sh
docker/local/: CMakeLists.txt  Dockerfile  Dockerfile.aarch64  Dockerfile.s390x  docker-entrypoint.sh
docker/local-ubi/: CMakeLists.txt
docker/rc/: CMakeLists.txt  Dockerfile
docker/slim/: CMakeLists.txt
docker/stable/: CMakeLists.txt  Dockerfile  docker-entrypoint.sh
docker/ubi/: CMakeLists.txt  get-version-and-exec.sh
test/: CMakeLists.txt  README  analyzer.cpp  analyzer_test.cpp  app_checks.cpp  auid.cpp  baseliner.cpp  capture_to_file_test.cpp  coclient_test.cpp  compliance.cpp  configuration_test.cpp  container.cpp  container_cgroup.cpp  container_cri.cpp  container_emitter_test.cpp  container_image_splitting.cpp  custom_container.cpp  dns_manager.cpp  docker_utils.cpp  docker_utils.h  emit_tracers.cpp  event_capture.cpp  event_capture.h  evttype_filter.cpp  falco_events_test.cpp  forking.cpp  fs.cpp  grpc.cpp  inf_state_test.cpp  infrastructure_state_test.cpp  internal_metrics.cpp  ipv6.cpp  jmx_proxy.cpp  json_query.cpp  k8s_limits.cpp  label_limits.cpp  list.sh  main.cpp  markers.cpp  memdump.cpp  (+42 more)
test/diff_pb/: CMakeLists.txt  README.md  diff_pb.cpp  draios.pb.cc  draios.pb.h  metrics_list.pb.cc  metrics_list.pb.h  metrics_list.proto
test/fake_cri/: CMakeLists.txt  fake_cri.cpp  fake_cri_agent_container.pb  fake_cri_agent_images.pb  fake_cri_agent_listcontainers.pb  fake_cri_agent_pod.pb  fake_cri_crio_container.pb  fake_cri_crio_images.pb  fake_cri_crio_listcontainers.pb  fake_cri_crio_pod.pb
test/grpc_test_server/: CMakeLists.txt  grpc_test_server.cpp
test/resources/: CMakeLists.txt  app_checks_ok.json  chname.cpp  execve.c  fake_backend.cert  fake_backend.key  fake_backend.py  fake_docker.py  forking_main_thread_exit.c  generate_baselines.py  jmx_fail.json  jmx_ok.json  jmx_segfault.json  jmx_wrong_object.json  k8s_audit_events.txt  procfs.tcp  security_baselines_message.txt  security_policies_message.txt  statsite_output.txt  statsite_output_long.txt  tcp_client.py  tcp_server.py  test.default.yaml  test.yaml  test_filters.yaml  unix_client.py  unix_server.py
test/sysdig/: generate_dump.sh
test/test_certs/: certificate.pem  key.pem
userspace/cointerface/: .gitignore  CMakeLists.txt
userspace/dragent/: .gitignore  CMakeLists.txt  agent-config.h.in  baseline_mgr.cpp  baseline_mgr.h  blocking_queue.h  capture_job_handler.cpp  capture_job_handler.h  coclient.cpp  coclient.h  configuration.cpp  configuration.h  connection_manager.cpp  connection_manager.h  crash_handler.cpp  crash_handler.h  dragent.cpp  dragent.default.yaml  dragent.h  dragent.properties  dragent.vcxproj  dumper_worker.cpp  dumper_worker.h  error_handler.cpp  error_handler.h  exec_worker.cpp  exec_worker.h  jmx_controller.cpp  jmx_controller.h  logger.cpp  logger.h  main.cpp  main.h  monitor.cpp  monitor.h  protocol.cpp  protocol.h  receiver.cpp  receiver.h  root.cert  (+32 more)
userspace/draiosproto/: CMakeLists.txt  Dockerfile  aggregated_pb_maker.sh  aggregation_context.proto  aggregator_base.h  aggregator_limits.cpp  aggregator_limits.h  aggregator_overrides.cpp  aggregator_overrides.h  common.proto  draios-aggregator-plugin.py  draios.helpers.h  draios.proto  draios_aggregated.proto  draios_proto_extension.py  handshake.proto  profiling.proto  promex.proto  protoc_plugin.sh  sdc_internal.proto  secure.proto  tap.proto
userspace/libsanalyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  analyzer_fd.cpp  analyzer_fd.h  analyzer_int.h  analyzer_parsers.cpp  analyzer_parsers.h  analyzer_settings.h  analyzer_thread.cpp  analyzer_thread.h  analyzer_utils.cpp  analyzer_utils.h  app_checks.cpp  app_checks.h  baseliner.cpp  baseliner.h  cm_quantile.c  coclient.cpp  coclient.h  config.cpp  config.h  connectinfo.cpp  connectinfo.h  container_analyzer.h  container_emitter.h  container_emitter.hh  custom_container.cpp  custom_container.h  datadog.cpp  datadog.h  delays.cpp  delays.h  draios.pb.cc  draios.pb.h  draios.proto  env_hash.cpp  env_hash.h  falco_events.cpp  falco_events.h  (+86 more)
userspace/libscap/: .cproject  .project  (+15 more)
(+2039 files in other folders)
